citadel/deploy/kubernetes/manifests/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: citadel
  namespace: citadel
  labels:
    app.kubernetes.io/name: citadel
    app.kubernetes.io/instance: citadel
    app.kubernetes.io/part-of: citadel
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: citadel
    app.kubernetes.io/instance: citadel
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
